7-kubernetes-networking/manifests/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8080
      targetPort: 80
