7-kubernetes-networking/manifests/ingress-phpmyadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  labels:
    app.kubernetes.io/name: phpmyadmin
spec:
  ingressClassName: nginx
  rules:
    - host: phpmyadmin.k3s.test.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 8080
  tls:
    - hosts:
        - phpmyadmin.k3s.test.local
      secretName: phpmyadmin-tls-secret
